--- a/application/app/assets/scss/_footer.scss
+++ b/application/app/assets/scss/_footer.scss
@@ -1,105 +1,89 @@
 .footer-bar {
-	display: flex;
-	justify-content: flex-end;
-	padding-left: 10px;
-	background: $color-primary;
-
-	.project-filters {
-
-		display: flex;
-
-		.project-filter__item {
-			margin: auto;
-			margin-right: 2px;
-			cursor: pointer;
-			display: inline-block;
-			height: 25px;
-			padding: 0 5px;
-			line-height: 28px; //Yuck! Source Sans Pro
-			color: #fff;
-
-			&:hover, &.project-filter__item--active {
-				background: #fff;
-				color: $color-primary;
-			}
-		}
-	}
-
-	.project-toolbar {
-		flex: 1;
-		display: flex;
-		justify-content: flex-end;
-		color: #fff;
-
-		.project-toolbar__item {
-
-			margin-top: auto;
-			margin-bottom: auto;
-			margin-right: 15px;
-			position: relative;
-
-			.project-toolbar__item__icon {
-				display: block;
-				width: 30px;
-				height: 30px;
-				line-height: 30px;
-				border: 1px solid #fff;
-				text-align: center;
-				border-radius: 50%;
-				margin: auto;
-				cursor: pointer;
-				transition: all .4s;
-
-				&:hover {
-					color: $color-primary;
-					background: #fff;
-					transition: all .4s;
-				}
-			}
-
-			&.project-toolbar__item--dropdown {
-				> i {
-					line-height: 27px;
-					font-size: 120%; //Shame CSS
-				}
-
-				.dropdown-menu {
-
-					background: #222;
-					border: none;
-					width: 250px;
-					bottom: 35px;
-
-					a {
-						color: #fff;
-						padding: 7px 12px;
-						cursor: pointer;
-                        font-weight: inherit;
-
-						&:hover {
-							background: $color-primary;
-						}
-					}
-
-					&::after {
-						position: absolute;
-						bottom: -6px;
-						right: 10px;
-						display: inline-block;
-						border-right: 6px solid transparent;
-						border-top: 6px solid #222;
-						border-left: 6px solid transparent;
-						content: '';
-					}
-				}
-			} 
-		}
-	}
-	
-	.clear-log-button {
-		border: 2px solid #fff;
-		margin-top: 10px;
-		margin-bottom: 10px;
-		margin-right: 10px;
-	}
+  display: flex;
+  justify-content: flex-end;
+  padding-left: 10px;
+  background: $color-primary;
+  .project-filters {
+    display: flex;
+    .project-filter__item {
+      margin: auto 2px auto auto;
+      cursor: pointer;
+      display: inline-block;
+      height: 25px;
+      padding: 0 5px;
+      line-height: 28px; //Yuck! Source Sans Pro
+      color: #fff;
+      &.project-filter__item--active,
+      &:hover {
+        background: #fff;
+        color: $color-primary;
+      }
+    }
+  }
+  .project-toolbar {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    color: #fff;
+    .project-toolbar__item {
+      margin-top: auto;
+      margin-bottom: auto;
+      margin-right: 15px;
+      position: relative;
+      .project-toolbar__item__icon {
+        display: block;
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        border: 1px solid #fff;
+        text-align: center;
+        border-radius: 50%;
+        margin: auto;
+        cursor: pointer;
+        transition: all 0.4s;
+        &:hover {
+          color: $color-primary;
+          background: #fff;
+          transition: all 0.4s;
+        }
+      }
+      &.project-toolbar__item--dropdown {
+        > i {
+          line-height: 27px;
+          font-size: 120%; //Shame CSS
+        }
+        .dropdown-menu {
+          background: #222;
+          border: none;
+          width: 250px;
+          bottom: 35px;
+          a {
+            color: #fff;
+            padding: 7px 12px;
+            cursor: pointer;
+            font-weight: inherit;
+            &:hover {
+              background: $color-primary;
+            }
+          }
+          &::after {
+            position: absolute;
+            bottom: -6px;
+            right: 10px;
+            display: inline-block;
+            border-right: 6px solid transparent;
+            border-top: 6px solid #222;
+            border-left: 6px solid transparent;
+            content: '';
+          }
+        }
+      }
+    }
+  }
+  .clear-log-button {
+    border: 2px solid #fff;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+  }
 }
