--- a/application/app/assets/scss/_home-screen.scss
+++ b/application/app/assets/scss/_home-screen.scss
@@ -1,19 +1,15 @@
 .home-screen__icon {
-
   font-size: 12vw;
   display: block;
   margin: auto;
   text-align: center;
   margin-top: 25vh;
   margin-bottom: 20px;
-  transition: all .5s;
-
+  transition: all 0.5s;
 }
-
-.home-screen__message{
+.home-screen__message {
   font-size: 2.2vw;
   font-weight: 200;
   text-align: center;
-  transition: all .5s;
-
+  transition: all 0.5s;
 }
